--- a/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
+++ b/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
@@ -218,35 +218,35 @@
         <table class="table">
             <thead>
                 <tr>
-                    <td class="trailerHeader; BottomTableTDSettings">
+                    <td class="trailerHeader" style="width: 2%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;">
                         <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
                     </td>
-                    <td class="trailerHeader; BottomTableTDSettings">
+                    <td class="trailerHeader" style="style=" width: 2%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;"">
                         <h3>Seneste anmeldelse</h3>
                     </td>
 
                     <td></td>
 
-                    <td class="trailerHeader; BottomTableTDSettings">
+                    <td class="trailerHeader" style="width: 2%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;">
                         <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
                     </td>
-                    <td class="trailerHeader; BottomTableTDSettings">
+                    <td class="trailerHeader" style="width: 2%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;">
                         <h3>Seneste artikel</h3>
                     </td>
 
                     <td id="whiteSpace"></td>
 
-                    <td class="trailerHeader; BottomTableTDSettings">
+                    <td class="trailerHeader" style="width: 2%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;">
                         <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
                     </td>
-                    <td class="trailerHeader; BottomTableTDSettings">
+                    <td class="trailerHeader" style="width: 2%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;">
                         <h3>Bliv medlem</h3>
                     </td>
                 </tr>
                 @* Column 1 *@
             <tr>
                 <td style="width:32%;padding-left:0%;padding-right:0%" colspan="2">
-                    <img src="~/Gamechanger billedmateriale/Anmeldelser/red_dead_redemption.jpg.png" class="BottomTableTDImgSettings" />
+                    <img src="~/Gamechanger billedmateriale/Anmeldelser/red_dead_redemption.jpg.png" style=" width: 100%; padding-left: 0%; padding-right: 0%;" />
                     <h5>
                         <strong>
                             I en hørm af krudtslam og hestelort
@@ -264,7 +264,7 @@
 
                 @* Column 3 *@
                 <td style="width:30%;padding-left:0%;padding-right:0%" colspan="2">
-                    <img src="~/Gamechanger billedmateriale/Forside/article_gamer.jpg" class="BottomTableTDImgSettings"  />
+                    <img src="~/Gamechanger billedmateriale/Forside/article_gamer.jpg" style=" width: 100%; padding-left: 0%; padding-right: 0%;"  />
                     <h5>
                         <strong>
                             Sådan bliver du professionel gamer
@@ -282,7 +282,7 @@
 
                 @* Column 5 *@
                 <td style="width:30%;padding-left:0%;padding-right:0%" colspan="2">
-                    <img src="~/Gamechanger billedmateriale/Forside/article_membership.png" class="BottomTableTDImgSettings"  />
+                    <img src="~/Gamechanger billedmateriale/Forside/article_membership.png" style=" width: 100%; padding-left: 0%; padding-right: 0%;"  />
                     <h5>
                         <strong>
                             Bliv medlem i dag og spar 30%
