--- a/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
+++ b/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
@@ -218,35 +218,35 @@
         <table class="table">
             <thead>
                 <tr>
-                    <td class="trailerHeader" style="width: 2%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;">
+                    <td class="trailerHeader" style="width: 0.5%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;margin-right:0%">
                         <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
                     </td>
-                    <td class="trailerHeader" style="style=" width: 2%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;"">
-                        <h3>Seneste anmeldelse</h3>
-                    </td>
-
-                    <td></td>
-
-                    <td class="trailerHeader" style="width: 2%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;">
-                        <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
-                    </td>
-                    <td class="trailerHeader" style="width: 2%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;">
-                        <h3>Seneste artikel</h3>
+                    <td class="trailerHeader" style=" width: 6%; padding-left: 0%; padding-bottom: 0%; padding-top: 1%;padding-right:1%">
+                        <h6>Seneste anmeldelse</h6>
                     </td>
 
                     <td id="whiteSpace"></td>
 
-                    <td class="trailerHeader" style="width: 2%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;">
+                    <td class="trailerHeader" style="width: 0.5%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;">
                         <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
                     </td>
-                    <td class="trailerHeader" style="width: 2%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;">
-                        <h3>Bliv medlem</h3>
+                    <td class="trailerHeader" style="width: 6%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;padding-left:0%">
+                        <h6>Seneste artikel</h6>
+                    </td>
+
+                    <td id="whiteSpace"></td>
+
+                    <td class="trailerHeader" style="width: 0.5%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;">
+                        <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:16px;height:19px" />
+                    </td>
+                    <td class="trailerHeader" style="width: 7%; padding-right: 0%; padding-bottom: 0%; padding-top: 1%;padding-left:0%">
+                        <h6>Bliv medlem</h6>
                     </td>
                 </tr>
                 @* Column 1 *@
             <tr>
-                <td style="width:32%;padding-left:0%;padding-right:0%" colspan="2">
-                    <img src="~/Gamechanger billedmateriale/Anmeldelser/red_dead_redemption.jpg.png" style=" width: 100%; padding-left: 0%; padding-right: 0%;" />
+                <td style="width:30%;padding-left:0%; padding-right: 0%" colspan="2">
+                    <img src="~/Gamechanger billedmateriale/Anmeldelser/red_dead_redemption.jpg.png" style=" width: 100%; padding-left: 0%; padding-right: 0%" />
                     <h5>
                         <strong>
                             I en hørm af krudtslam og hestelort
@@ -260,11 +260,11 @@
                     </button>
                 </td>
 
-                <td></td>
+                <td  id="whiteSpace"></td>
 
                 @* Column 3 *@
-                <td style="width:30%;padding-left:0%;padding-right:0%" colspan="2">
-                    <img src="~/Gamechanger billedmateriale/Forside/article_gamer.jpg" style=" width: 100%; padding-left: 0%; padding-right: 0%;"  />
+                <td style="width:28%;padding-left:0%;padding-right:0%" colspan="2">
+                    <img src="~/Gamechanger billedmateriale/Forside/article_gamer.jpg" style=" width: 100%; padding-left: 0%; padding-right: 0%" />
                     <h5>
                         <strong>
                             Sådan bliver du professionel gamer
@@ -277,19 +277,17 @@
                         Læs mere
                     </button>
                 </td>
-
-                <td></td>
-
+                <td  id="whiteSpace"></td>
                 @* Column 5 *@
                 <td style="width:30%;padding-left:0%;padding-right:0%" colspan="2">
-                    <img src="~/Gamechanger billedmateriale/Forside/article_membership.png" style=" width: 100%; padding-left: 0%; padding-right: 0%;"  />
+                    <img src="~/Gamechanger billedmateriale/Forside/article_membership.png" style=" width: 100%; padding-left: 0%; padding-right: 0%" />
                     <h5>
                         <strong>
                             Bliv medlem i dag og spar 30%
                         </strong>
                     </h5>
                     <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
                     <button class="AquaButton" style="width:30%">
                         Læs mere
