--- a/GameChanger Projekt - El Ti/wwwroot/css/frontPage.css
+++ b/GameChanger Projekt - El Ti/wwwroot/css/frontPage.css
@@ -126,3 +126,10 @@ table {
     padding-bottom: .1%;
     font-size: 10px;
 }
+
+#whiteSpace{
+    padding-left:0%;
+    padding-right:0%;
+    width:0.3%;
+    background-color:white
+}
