--- a/GameChanger Projekt - El Ti/wwwroot/css/tekstHeader.css
+++ b/GameChanger Projekt - El Ti/wwwroot/css/tekstHeader.css
@@ -51,11 +51,11 @@ a:hover {
 }
 
 p {
-    font-size: 2vh;
+    font-size: 1vw;
 }
 
 h3 {
-    font-size: 3vh;
+    font-size: 2vw;
 }
 
 /*Font setting*/
