--- a/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
+++ b/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
@@ -91,8 +91,8 @@
                     <th class="trailerHeader" style="text-align:right;padding-right:0%;padding-top:0%;padding-bottom:1.5%">
                         <img src="~/Gamechanger billedmateriale/Grafik/icon_titlebar.png" style="width:20px;height:20px" />
                     </th>
-                    <th class="trailerHeader" style="padding-bottom: 0%;padding-top:1%">
-                        <h3>
+                    <th class="trailerHeader" style="padding-bottom: 0%;padding-top:1%; ">
+                        <h3 style="font-size: 1.7vw">
                             Mest populære spil
                         </h3>
                     </th>
@@ -324,7 +324,7 @@
     <div class="header; sticky" id="frontHeader" style="width: 100%">
 
         <div class="topnav" style="text-align: center">
-            <a href="http://localhost:55716/">Forside</a>
+            <a href="http://localhost:55716/" id="active">Forside</a>
             <a href="Spil.html">Spil</a>
             <a href="Kontakt.html">Kontakt</a>
         </div>
