--- a/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
+++ b/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
@@ -103,7 +103,7 @@
                         Takes a border cut from youtube. In this case a trailer for call of Duty
                     *@
                     <td style="width:100%;height:150%;padding-left:0%;padding-top:1%;padding-right:0%;border:hidden" colspan="2">
-                        <iframe style="width:100%;height:250%" src="https://www.youtube.com/embed/hvoD7ehZPcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe style="width:100%;height:400px" src="https://www.youtube.com/embed/hvoD7ehZPcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h4>
                             Grand Theft Auto V Trailer
                         </h4>
@@ -123,12 +123,12 @@
                     <td colspan="2" style="padding-top:0%;padding-left:0%;padding-right:0%">
                         <table style="border:hidden;padding:1%;width:100%">
                             <tr id="whiteThumb">
-                                <td id="whiteThumb">
+                                <td id="whiteThumb" width="20%">
                                     <a href="~/Anmeldelser/SplinterCellBlacklist.html">
-                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" style="height:30%" />
+                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_splintercell.jpg" style="height:30%; width:75px" />
                                     </a>
                                 </td>
-                                <td id="thumbText" style="padding-left: 2%">
+                                <td id="thumbText" style="padding-left: 2%;">
                                     <a href="~/Anmeldelser/SplinterCellBlacklist.html">
                                         <h6><strong>Splinter Cell: Black List</strong></h6>
                                     </a>
@@ -140,9 +140,9 @@
                             </tr>
 
                             <tr id="greyThumb">
-                                <td style="padding-bottom:0%;padding-left:2%;padding-right:1%">
+                                <td style="padding-bottom:0%;padding-left:2%;padding-right:1%" width="20%">
                                     <a href="~/Anmeldelser/gtav.html">
-                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" style="height:30%" />
+                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_gtav.jpg" style="height:30%;width:75px" />
                                     </a>
                                 </td>
                                 <td id="thumbText" style="padding-left: 2%">
@@ -157,9 +157,9 @@
                             </tr>
 
                             <tr id="whiteThumb">
-                                <td id="whiteThumb">
+                                <td id="whiteThumb" width="20%">
                                     <a href="~/Anmeldelser/thombraider2013.html">
-                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" style="height:30%" />
+                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_tomb_raider_2013.jpg" style="height:30%;width:75px" />
                                     </a>
                                 </td>
                                 <td id="thumbText" style="padding-left: 2%">
@@ -174,9 +174,9 @@
                             </tr>
 
                             <tr id="greyThumb">
-                                <td id="greyThumb">
+                                <td id="greyThumb" width="20%">
                                     <a href="~/Anmeldelser/Forza4.html">
-                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" style="height:30%" />
+                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_forza4.jpg" style="height:30%;width:75px" />
                                     </a>
                                 </td>
                                 <td id="thumbText" style="padding-left: 2%">
@@ -191,9 +191,9 @@
                             </tr>
 
                             <tr id="whiteThumb">
-                                <td id="whiteThumb">
+                                <td id="whiteThumb" width="20%">
                                     <a href="~/Anmeldelser/Titanfall.html">
-                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" style="height:30%" />
+                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_titanfall.jpg" style="height:30%;width:75px" />
                                     </a>
                                 </td>
                                 <td id="thumbText" style="padding-left: 2%">
@@ -208,9 +208,9 @@
                             </tr>
 
                             <tr id="greyThumb">
-                                <td id="greyThumb">
+                                <td id="greyThumb" width="20%">
                                     <a href="~/Anmeldelser/Halo4.html">
-                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" style="height:30%" />
+                                        <img src="~/Gamechanger billedmateriale/Thumbs/thumb_halo4.jpg" style="height:30%;width:75px" />
                                     </a>
                                 </td>
                                 <td id="thumbText" style="padding-left: 2%">
