--- a/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
+++ b/GameChanger Projekt - El Ti/Views/Home/Index.cshtml
@@ -323,8 +323,8 @@
     @* Navigation banner *@
     <div class="header; sticky" id="frontHeader" style="width: 100%">
 
-        <div class="topnav" style="text-align: center">
-            <a href="http://localhost:55716/" id="active">Forside</a>
+        <div class="topnav" style="text-align: center;">
+            <a href="http://localhost:55716/" id="active" style="border-spacing: 0%;">Forside</a>
             <a href="Spil.html">Spil</a>
             <a href="Kontakt.html">Kontakt</a>
         </div>
